[metadata]
name = aerialflowerintensity
description = Aerial Flower Intensity
long_description = 
author = Inrae/Hiphen
license = Proprietary
classifiers =
	Environment :: Console
	License :: Other/Proprietary License
	Programming Language :: Python :: 3 :: Only
	Private :: Do not Upload

[options]
include_package_data = True
install_requires =
	numpy
	pandas
	tqdm
	matplotlib
	open3d
	python-lzf
	pyproj
	laspy
	laszip
	opencv-python-headless
python_requires = >=3.11, <4

[options.entry_points]
console_scripts = aerial-flower-intensity = aerialflowerintensity.cli:main
